--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,15 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Generate .env file
+        run: |
+          echo "DB_HOST=${{ env.DB_HOST }}" > .env
+          echo "DB_PORT=${{ env.DB_PORT }}" >> .env
+          echo "DB_USER=${{ env.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> .env
+          echo "DB_NAME=${{ env.DB_NAME }}" >> .env
+          echo "APP_PORT=${{ env.APP_PORT }}" >> .env
+          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
       - name: Extract metadata
