--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ env:
   # Application Configuration
   APP_PORT: ${{ secrets.PORT }}
 
+  NODE_ENV: ${{ vars.NODE_ENV }}
 jobs:
   # Stage 1: Install Dependencies
   install-dependencies:
@@ -108,18 +109,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [linting, test, security]
-    env:
-      NODE_ENV: production
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
+      - name: Setup Environment
+        uses: ./.github/actions/setup-environment
       - name: Generate .env file
         run: |
           echo "DB_HOST=${{ env.DB_HOST }}" > .env
