--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky",
+    "prepare": "test -n \"$CI\" || husky",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/typeOrm.config.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/typeOrm.config.ts",
@@ -33,6 +33,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
@@ -41,6 +42,7 @@
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
