--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare-dev": "husky",
-    "prepare": "[ -n \"$CI\" ] || npm run prepare-dev",
+    "prepare": "test -n \"$CI\" || husky",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/typeOrm.config.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/typeOrm.config.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/database/typeOrm.config.ts",
-    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts",
-    "types:generate": "openapi-typescript http://localhost:3000/api-docs-json --output ./src/types/f1-api.ts"
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
@@ -68,7 +66,6 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "openapi-typescript": "^7.8.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -98,13 +95,10 @@
     "collectCoverage": true,
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "/src/database/*",
-      "/src/config/*",
       "\\.test\\.(js|ts)$",
       "\\.entity\\.(js|ts)$",
       "\\.module\\.(js|ts)$",
       "\\.interface\\.(js|ts)$",
-      "\\.dto\\.(js|ts)$",
       "\\.spec\\.(js|ts)$",
       "\\.d\\.ts$",
       "\\.config\\.",
