--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -1,5 +1,5 @@
 name: 'Setup Environment'
-description: 'Sets up Node.js and handles node_modules cache'
+description: 'Sets up Node.js, handles node_modules cache, and installs dependencies'
 outputs:
   cache-hit:
     description: 'Whether the cache was hit'
@@ -18,3 +18,8 @@ runs:
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ github.head_ref || github.ref_name }}-${{ hashFiles('**/package-lock.json') }}
+
+    - name: Install Dependencies
+      if: steps.cache-node-modules.outputs.cache-hit != 'true'
+      shell: bash
+      run: npm ci
